plugins {
	id 'java'
	id 'idea'
	id 'org.springframework.boot' version '3.0.1'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'io.freefair.lombok' version '6.6.1'
	id "application"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.jetbrains:annotations:24.0.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-inline'
	// https://mvnrepository.com/artifact/org.apache.commons/commons-csv
	implementation 'org.apache.commons:commons-csv:1.5'
//	compileOnly 'org.projectlombok:lombok:1.18.24'
//	annotationProcessor 'org.projectlombok:lombok:1.18.24'
//
//	testCompileOnly 'org.projectlombok:lombok:1.18.24'
//	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
}

tasks.named('test') {
	useJUnitPlatform()
}

application {
	mainClass.set('com.example.demo.AddressFinder')
}
